--- a/invenio_app_rdm/users_ui/templates/semantic-ui/invenio_app_rdm/users/header.html
+++ b/invenio_app_rdm/users_ui/templates/semantic-ui/invenio_app_rdm/users/header.html
@@ -25,18 +25,18 @@
     {% if active_dashboard_menu_item == "uploads" %}
       <a class="ui tiny button positive left labeled icon m-0" href="/uploads/new?community=rik">
         <i class="upload icon" aria-hidden="true"></i>
-        {{ _('New RIK upload') }}
+        {{ _('New REK Upload') }}
       </a>
       <a class="ui tiny button positive left labeled icon m-0" href="/uploads/new">
         <i class="upload icon" aria-hidden="true"></i>
-        {{ _('New upload') }}
+        {{ _('New Upload') }}
       </a>
     {% endif %}
 
     {% if active_dashboard_menu_item == "communities" %}
       <a class="ui tiny button positive left labeled icon m-0" href="/communities/new">
         <i class="plus icon" aria-hidden="true"></i>
-        {{ _('New community') }}
+        {{ _('New Collection') }}
       </a>
     {% endif %}
   </div>
