--- a/invenio_app_rdm/users_ui/templates/semantic-ui/invenio_app_rdm/users/uploads.html
+++ b/invenio_app_rdm/users_ui/templates/semantic-ui/invenio_app_rdm/users/uploads.html
@@ -16,10 +16,12 @@
 {%- endblock javascript %}
 
 {%- block user_dashboard_body %}
+<div id="react-root"></div>
   <div
     id="invenio-search-config"
+    
     data-invenio-search-config='{{ search_app_rdm_user_uploads_config(app_id="InvenioAppRdm.DashboardUploads") | tojson }}'
   >
-
+ 
 </div>
 {%- endblock user_dashboard_body %}
