--- a/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/header.html
+++ b/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/header.html
@@ -115,6 +115,7 @@
 
             {%- block navbar_right %}
               <div class="right menu item">
+                <div id="react-stumbleNav"></div>
                 {%- if config.ACCOUNTS and current_user.is_authenticated %}
                   {% for item in current_menu.submenu('notifications').children|sort(attribute='order') if item.visible recursive %}
                     <div class="{{'item active' if item.active else 'item' }} inbox">
@@ -130,6 +131,7 @@
             {%- endblock navbar_right %}
           </nav>
         </nav>
+        
       {%- endblock navbar %}
     </div>
 
