--- a/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/searchbar.html
+++ b/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/searchbar.html
@@ -22,6 +22,7 @@
       %}
     {% endif %}
       <div class="item p-0 search-bar">
+       
         <div id="header-search-bar" data-options='{{ options | tojson }}'>
           <div class="ui fluid search">
             <div class="ui icon input">
@@ -38,5 +39,8 @@
             </div>
           </div>
         </div>
-      </div>
+     
+        <div id="react-stumbleNav" style="padding: 20px;"></div>
 
+      </div>
+    
