--- a/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/searchbar.html
+++ b/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/searchbar.html
@@ -38,5 +38,6 @@
             </div>
           </div>
         </div>
+        <div id="react-stumbleNav" style="padding: 20px;"></div>
       </div>
 
