--- a/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/header_login.html
+++ b/invenio_app_rdm/theme/templates/semantic-ui/invenio_app_rdm/header_login.html
@@ -101,12 +101,10 @@
     </head>
     <body>
     
-    
       <div id="root" class="ui form">
         <div class="field">
-         
           <select id="dropdown" class="ui dropdown" onchange="sendTo()">
-            <option value=""></option>
+            <option value="">Stumble</option>
             <option value="publication">Publication</option>
             <option value="Audio/Video">Audio/Video</option>
             <option value="all">Full Stumble</option>
